Fix manual card contrast

--- a/app/styles/includes/content/grid.scss
+++ b/app/styles/includes/content/grid.scss
@@ -14,6 +14,9 @@
   position: relative;
   flex: 1 1 auto;
   overflow: hidden;
+  @include desktop {
+    padding: 0 30px;
+  }
 }
 
 .grid__item--fixed {
