--- a/app/styles/includes/content/manual-side-nav.scss
+++ b/app/styles/includes/content/manual-side-nav.scss
@@ -1,6 +1,5 @@
 .manual__nav {
   display: none;
-  padding: 0 0 0 30px;
   color: $grayishBrown;
   font-size: 18px;
 
