--- a/app/styles/includes/share/vertical.scss
+++ b/app/styles/includes/share/vertical.scss
@@ -7,7 +7,7 @@
 
   .share__item {
     display: block;
-    margin: 0 30px 20px 0;
+    margin: 0 0 20px;
   }
 
   .share__link {
